solve error dark mode

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ font-family: 'Roboto', sans-serif; */
 }
 
 :root {
-  --primary-color: #944343;
+  --primary-color: #883d3d;
   --secondary-color: #212121;
 }
 
